# nanojudge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: continuous-integration.yml  release.yml
nanojudge-cli/: Cargo.toml
nanojudge-cli/src/: benchmark.rs  benchmark_questions.json  config.rs  llm.rs  main.rs  output.rs  parse.rs  prompt.rs
nanojudge-core/: Cargo.toml  README.md
nanojudge-core/src/: bradley_terry.rs  constants.rs  engine.rs  gaussian_bt.rs  lib.rs  pairing.rs  scoring.rs  types.rs
